--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -1,193 +1,176 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@color/background_secondary"
-	tools:context=".CreateAccountActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scroll_view_account"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_secondary"
+    tools:context=".CreateAccountActivityLollipop">
 
-	<LinearLayout 
-	    android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center" >
-        
-	    <LinearLayout 
-	        android:id="@+id/create_account_create_layout"
-	        android:layout_width="match_parent"
+        android:gravity="left"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/create_account_create_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingTop="40dp" 
-            android:background="@color/white" >
-	
-		    <TextView
-		        android:id="@+id/create_account_text_view"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:textSize="28sp"
-		        android:textColor="@color/text_login"
-		        android:text="@string/create_account_text"
-		        android:layout_gravity="center" />
-		    
-		    <EditText
-		        android:id="@+id/create_account_name_text"
-		        android:inputType="text"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:hint="@string/name_text"
-		        android:imeOptions="actionNext"
-		        android:layout_gravity="center" 
-		        style="@style/InputField" />	
-		    
-		    <EditText
-		        android:id="@+id/create_account_email_text"
-		        android:inputType="textEmailAddress"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:hint="@string/email_text"
-		        android:imeOptions="actionNext"
-		        android:layout_gravity="center" 
-		        style="@style/InputField" />		
-		    
-		    <EditText
-		        android:id="@+id/create_account_password_text"
-		        android:inputType="textPassword"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:hint="@string/password_text"
-		        android:imeOptions="actionNext"
-		        android:layout_gravity="center"
-		        style="@style/InputField" />
-		    
-		    <EditText
-		        android:id="@+id/create_account_password_text_confirm"
-		        android:inputType="textPassword"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:hint="@string/confirm_password_text"
-		        android:imeOptions="actionDone"
-		        android:layout_gravity="center"
-		        style="@style/InputField" />
-		    
-		    <TableLayout 
-		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-		        android:gravity="left" >
-		        
-		        <TableRow>
-		            
-		            <CheckBox
-				        android:id="@+id/create_account_chkTOS"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        style="@style/checkbox_MEGA" 
-				        android:gravity="left|center_vertical" />
-		            
-		            <TextView
-		                android:id="@+id/tos"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:text="@string/tos" 
-	                    android:gravity="left|center_vertical"
-	                    android:layout_marginTop="5dp"
-	                    android:layout_marginBottom="5dp"
-	                    android:layout_marginRight="5dp"
-	                    android:linksClickable="true"
-	                    android:singleLine="false"
-	                    android:textSize="8sp" />
-		    
-		    		<!-- <TextView
-	                    android:id="@+id/terms"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginLeft="5dp"
-	                    android:textColor="@color/mega" 
-	                    android:gravity="left|center_vertical"
-	                    android:layout_marginTop="5dp"
-	                    android:layout_marginBottom="5dp" /> -->
-		        </TableRow>		        
-		    </TableLayout>
-		           
-		    
-             
-		    <Button
-		        android:id="@+id/button_create_account_create"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:text="@string/create_account_text" 
-		        android:layout_gravity="center"
-                style="@style/button_MEGA" />
-		
-		</LinearLayout>
-		
-	    <include layout="@layout/delimiter" />
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/create_account_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-medium"
+                android:text="@string/create_account_text"
+                android:textColor="@color/lollipop_primary_color"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/create_account_name_text"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:hint="@string/name_text"
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+            
+             <EditText
+                android:id="@+id/create_account_last_name_text"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:hint="@string/lastname_text"
+                android:imeOptions="actionNext"
+                android:inputType="text" />
+
+            <EditText
+                android:id="@+id/create_account_email_text"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:hint="@string/email_text"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress" />
+
+            <EditText
+                android:id="@+id/create_account_password_text"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:hint="@string/password_text"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword" />
+
+            <EditText
+                android:id="@+id/create_account_password_text_confirm"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="left"
+                android:hint="@string/confirm_password_text"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:linksClickable="true"
+                    android:singleLine="false"
+                    android:text="@string/tos"
+                    android:textSize="8sp" />
+
+                <CheckBox
+                    android:id="@+id/create_account_chkTOS"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/button_create_account_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/accentColor"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <include layout="@layout/delimiter" />
 
         <LinearLayout
             android:id="@+id/create_account_login_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            
-            android:gravity="center_horizontal"
-            >
-            
+            android:layout_height="fill_parent"
+            android:background="@color/background_secondary"
+            android:gravity="left"
+            android:orientation="vertical" >
+
             <TextView
+                android:id="@+id/text_already_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="@dimen/standard_margin"
-                android:textColor="@color/text_login"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/already_account"
-                />
-            
-            <Button
-		        android:id="@+id/button_login_create"
-                style="@style/button_MEGA_inverse"
-                android:layout_gravity="center"
-                android:text="@string/login_text" >
-            </Button>
-            
+                android:textColor="@color/text_login"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/button_login_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/accentColor"
+                android:textSize="14sp" />
         </LinearLayout>
-        
+
         <LinearLayout
-		    android:id="@+id/create_account_creating_layout"
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-		    android:orientation="vertical"
-		    android:gravity="center_horizontal|center_vertical" >
-        
-		    <ImageView 
-		        android:id="@+id/create_account_mega_logo"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:src="@drawable/mega_ic"
-		        android:layout_marginTop="100dp"/>
-		    
-		    <TextView
-		        android:id="@+id/create_account_generating_keys_text"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/login_generating_key"
-		        android:layout_marginTop="30dp" />
-		    
-		    <TextView
-		        android:id="@+id/create_account_creating_text"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/create_account_creating_account" 
-		        android:layout_marginTop="5dp"/>
-		    
-		    <ProgressBar
-		        android:id="@+id/create_account_progress_bar"
-		        style="?android:attr/progressBarStyleLargeInverse"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_gravity="center"
-		        android:layout_marginTop="30dp" />
-	    
-	    </LinearLayout>
-	
-	</LinearLayout>
-	
+            android:id="@+id/create_account_creating_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/create_account_mega_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:src="@drawable/mega_ic" />
+
+            <TextView
+                android:id="@+id/create_account_generating_keys_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/login_generating_key" />
+
+            <TextView
+                android:id="@+id/create_account_creating_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/create_account_creating_account" />
+
+            <ProgressBar
+                android:id="@+id/create_account_progress_bar"
+                style="@style/UsedSpaceProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp" />
+        </LinearLayout>
+    </LinearLayout>
+
 </ScrollView>
