--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -1,89 +1,126 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:background="@color/background_secondary"
-	tools:context=".LoginActivityLollipop">
+    android:id="@+id/scroll_view_tour"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_secondary"
+    tools:context=".LoginActivityLollipop">
 
-	<LinearLayout 
-	    android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center" >
-        
-	  	<LinearLayout 
-	        android:layout_width="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:orientation="vertical"
             android:paddingBottom="0dp"
-            android:paddingTop="0dp" 
-            android:background="@color/white" >
-	       
-	       <mega.privacy.android.app.components.LoopViewPager
-	           android:id="@+id/pager"
-	           android:layout_width="fill_parent"
-	           android:layout_height="wrap_content"
-	           android:layout_gravity="center" />
-	       
-	       <ImageView 
-	           android:id="@+id/barTour"
-	           android:layout_width="fill_parent"
-	           android:layout_height="wrap_content" 
-	           android:src="@drawable/tour01_bar" />
-      
-	  
-		</LinearLayout>
- 	
-	    <include layout="@layout/delimiter" />
+            android:paddingTop="0dp" >
+
+            <mega.privacy.android.app.components.LoopViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+            <LinearLayout 
+                android:id="@+id/bar_tour_layout"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:orientation="horizontal">
+                
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+                <LinearLayout 
+                    android:id="@+id/bar_tour_layout_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/tour_bar_grey"
+                    android:orientation="horizontal" />
+            </LinearLayout>            
+        </LinearLayout>
+
+        <include layout="@layout/delimiter" />
 
         <LinearLayout
             android:id="@+id/tour_login_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="10dp" 
-            android:paddingBottom="20dp"
-            android:gravity="center_horizontal"
-            >
-	       
+            android:gravity="left|center_vertical"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tour_text_1"
+               	android:fontFamily="sans-serif-medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:layout_marginBottom="@dimen/standard_margin"
-                android:textColor="@color/mega"
                 android:text="@string/tour_space_title"
-                />
-            
+                android:textColor="@color/lollipop_primary_color"
+                android:textSize="22sp" />
+
             <TextView
                 android:id="@+id/tour_text_2"
+                android:fontFamily="sans-serif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:layout_marginBottom="@dimen/standard_margin"
-                android:textColor="@color/text_login"
                 android:text="@string/tour_space_text"
-                />
-            
-            <Button
-                android:id="@+id/button_login_tour"
-                style="@style/button_MEGA"
-                android:layout_gravity="center"
-                android:text="@string/login_text"
-                android:gravity="center" >
-            </Button>
-            
-            <Button
-                android:id="@+id/button_register_tour"
-                style="@style/button_MEGA_inverse"
-                android:layout_gravity="center"
-                android:text="@string/create_account" 
-                android:gravity="center" >
-            </Button>
-            
+                android:textColor="@color/black"
+                android:textSize="14sp" />
         </LinearLayout>
 
-	</LinearLayout>
-	
+        <View
+            android:id="@+id/separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/delimiterColor" />
+
+        <LinearLayout
+            android:id="@+id/options_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/button_login_tour"
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/accentColor"
+                android:gravity="center"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/button_register_tour"
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/accentColor"
+                android:textSize="14sp"/>
+        </LinearLayout>
+    </LinearLayout>
+
 </ScrollView>
