--- a/app/src/main/res/layout/item_file_grid.xml
+++ b/app/src/main/res/layout/item_file_grid.xml
@@ -1,96 +1,104 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/file_grid_item_complete_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
-    
-    <RelativeLayout 
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/file_grid_item_layout"
+    android:layout_width="172dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    android:layout_margin="3dp"
+    android:background="@drawable/background_item_grid"
+    android:descendantFocusability="blocksDescendants" >
+
+    <ImageView
+        android:id="@+id/file_grid_thumbnail"
         android:layout_width="172dp"
+        android:layout_height="172dp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:background="@null"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:id="@+id/file_grid_saved_offline"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/file_grid_item_layout1"
-        android:background="@drawable/background_item_grid"
-        android:layout_alignParentTop="true"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="15dp"
+        android:background="@null"
+        android:src="@drawable/ic_cloud_saved_offline" />
+
+    <ImageView
+        android:id="@+id/file_grid_public_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:src="@drawable/link_ic"  
+        android:tint="@color/transparency_white"
+        android:layout_alignParentRight="true"       
+        android:layout_marginRight="22dp"
+        android:layout_marginTop="10dp"/>
+
+    <View
+        android:id="@+id/file_grid_separator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/file_grid_thumbnail"
+        android:background="@color/new_background_fragment"/>
+
+    <ImageButton
+        android:id="@+id/file_grid_three_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/file_grid_separator"
+        android:paddingLeft="2dp"
+        android:paddingRight="8dp"
+        android:paddingTop="22dp"
+        android:background="@null"
+        android:src="@drawable/ic_dots_vertical_grey" />
+
+    <TextView
+        android:id="@+id/file_grid_filename"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:descendantFocusability="blocksDescendants" >
-        
-        <ImageButton
-	        android:id="@+id/file_grid_thumbnail1"
-	        android:layout_width="157dp"
-	        android:layout_height="157dp"
-	        android:layout_centerHorizontal="true"
-	        android:scaleType="fitCenter"
-	        android:background="@null" />
-        
-        <View
-	        android:id="@+id/file_grid_separator1"
-	 		android:layout_width="wrap_content"
-	 		android:layout_height="2dp"
-	 		android:background="@color/grid_item_separator"
-	        android:scaleType="fitCenter"
-	        android:layout_marginLeft="6dp"
-	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/file_grid_thumbnail1"
-	 		 />
-        
-        <TextView
-	        android:id="@+id/file_grid_filename1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"	
-	        android:paddingLeft="6dp"
-	        android:paddingTop="3dp"
-	        android:layout_below="@id/file_grid_separator1" />
-        
-              
-        
-        <TextView
-	        android:id="@+id/file_grid_filesize1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:paddingLeft="6dp"
-	        android:paddingBottom="7dp"
-	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename1"
-	        android:textSize="12sp" />
-        
-        <ImageButton 
-	        android:id="@+id/file_grid_three_dots1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/action_selector_ic"
-			android:background="@null" 
-			android:paddingTop="10dp"
-	        android:paddingLeft="2dp"
-	        android:paddingRight="10dp"
-	        android:paddingBottom="8dp"
-	        android:layout_gravity="right"
-	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>        
-        
-       <ProgressBar
-	    android:id="@+id/transfers_list__browser_bar1"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		android:paddingRight="10dp"
-		android:paddingBottom="10dp"
-		style="@style/MEGAProgressBarTransfers"  
-		android:layout_margin="5dip" 
-        android:layout_toLeftOf="@id/file_grid_three_dots1"
-        android:layout_below="@id/file_grid_filename1" /> 
-         <!--
-        <ImageView
-	        android:id="@+id/file_grid_arrow_selection1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/file_grid_three_dots1"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:paddingRight="14dp" />
-               -->
-    </RelativeLayout>
-    
+        android:layout_below="@id/file_grid_separator"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="15dp"
+        android:layout_toLeftOf="@id/file_grid_three_dots"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/file_grid_filesize"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/file_grid_filename"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="12dp"
+        android:textColor="@color/file_list_second_row"
+        android:textSize="12sp" />
+
+    <ProgressBar
+        android:id="@+id/transfers_grid_browser_bar"
+        style="@style/UsedSpaceProgressBar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/file_grid_filename"
+        android:layout_margin="5dip"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@id/file_grid_three_dots" />
+
+</RelativeLayout><!--
     <RelativeLayout
         android:id="@+id/file_grid_options1"
         android:layout_width="match_parent"
@@ -103,17 +111,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             
-            <TableRow>
-<!--  	            <ImageButton
-		            android:id="@+id/file_grid_option_open1"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_action_collections_collection"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
--->	        
+            <TableRow>  
 				<ImageView
 		            android:id="@+id/file_grid_option_download1"
 		            android:layout_width="wrap_content"
@@ -172,16 +170,7 @@
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
-  
-    <!--  
-    <View
-	    android:id="@+id/file_grid_separator_final"
-		android:layout_width="5dp"
-		android:layout_height="0dp"
-		android:background="@null"
-        android:layout_alignParentRight="true" /> -->
-        
-   
+    
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -250,18 +239,7 @@
 		android:paddingBottom="10dp"
 		android:layout_margin="5dip"
         android:layout_toLeftOf="@id/file_grid_three_dots2"
-        android:layout_below="@id/file_grid_filename2" />    
-   <!--
-        <ImageView
-	        android:id="@+id/file_grid_arrow_selection2"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/file_grid_three_dots2"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:paddingRight="14dp" />-->
-        
+        android:layout_below="@id/file_grid_filename2" />         
     </RelativeLayout>
 
     <RelativeLayout
@@ -275,17 +253,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             
-            <TableRow>
-<!--  	            <ImageButton
-		            android:id="@+id/file_grid_option_open2"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_action_collections_collection"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
--->	        
+            <TableRow>       
 				<ImageView
 		            android:id="@+id/file_grid_option_download2"
 		            android:layout_width="wrap_content"
@@ -344,5 +312,5 @@
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
-    
-</RelativeLayout>
+-->
+<!-- </RelativeLayout> -->
