--- a/app/src/main/res/layout/fragment_offlinelist.xml
+++ b/app/src/main/res/layout/fragment_offlinelist.xml
@@ -3,75 +3,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".OfflineFragment" >
-    
-    <TextView
-	    android:id="@+id/offline_content_text"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingLeft="8dp"
-	    android:textColor="@color/white"
-	    android:paddingTop="3dp"
-	    android:paddingBottom="3dp"
-	    android:background="@color/content_text_folder"
-	    android:textSize="14sp"/>
+    tools:context=".OfflineFragmentLollipop" >
 
-    <LinearLayout
-         android:id="@+id/offline_out_space"
-    	 android:layout_width="fill_parent"
-    	 android:layout_height="wrap_content"
-    	 android:layout_alignParentBottom="true"
-    	 android:layout_gravity="center|fill_horizontal"
-    	 android:layout_centerHorizontal="true"
-    	 android:orientation="vertical">
+    <RelativeLayout
+        android:id="@+id/offline_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:background="@color/content_text_background">
 
-		<TextView
-		    android:id="@+id/offline_out_space_text"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:textColor="@color/white"
-		    android:textStyle="bold"
-		    android:paddingTop="20dp"
-		    android:paddingBottom="20dp"
-		    android:paddingLeft="20dp"
-		    android:paddingRight="20dp"
-		    android:gravity="center"
-		    android:background="@color/navigation_drawer_background"
-		    android:textSize="16sp"
-		    android:text="@string/warning_out_space"/>  
-         
-         <Button
-            android:id="@+id/offline_out_space_btn"
-       		android:layout_height="48dp"       		
-       		android:layout_width="fill_parent"
-            android:background="@drawable/btn_default_holo_light_without_corners"
-            android:textColor="@color/white"
-            android:text="@string/my_account_upgrade_pro" />
-     </LinearLayout>
-    
-    
-    <ListView
+        <TextView
+            android:id="@+id/offline_content_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:layout_centerVertical="true"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/offline_content_text_layout"
+        android:background="@color/delimiterColor" />
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/offline_view_browser"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:layout_below="@id/offline_content_text"
-        android:choiceMode="multipleChoice">
-    </ListView>
-    
+        android:layout_height="match_parent"
+        android:layout_below="@id/separator"
+        android:choiceMode="multipleChoice" />
+
     <ImageView
-	    android:id="@+id/offline_empty_image"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_centerInParent="true" />
-    
+        android:id="@+id/offline_empty_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
     <TextView
-	    android:id="@+id/offline_empty_text"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:textColor="@color/text_secondary"
-	    android:textSize="16sp"
-	    android:layout_below="@id/offline_empty_image"
-	    android:layout_marginTop="@dimen/standard_margin"
-	    android:layout_centerHorizontal="true"/>
+        android:id="@+id/offline_empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/offline_empty_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
 
 </RelativeLayout>
