--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -1,119 +1,55 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_container_file_explorer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".LauncherFileExplorerActivity" >
+    tools:context=".FileProviderActivityLollipop" >
 
-    <RelativeLayout
-        android:id="@+id/file_explorer_toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_explorer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin" >
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:context=".FileProviderActivityLollipop" />
 
-        <LinearLayout
-            android:id="@+id/file_explorer_button_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal" >
-
-<!--             <ImageButton
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_refresh"
-                android:onClick="onRefreshClick"
-                android:src="@drawable/ic_menu_navigation_refresh_dark" />
--->
-            <ImageButton
-                android:id="@+id/file_explorer_new_folder"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_new_folder"
-                android:src="@drawable/ic_create_new_folder_white" />
-        </LinearLayout>
-
-        <ImageView 
-            android:id="@+id/file_explorer_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_arrow_back_white"/>
-        
-        <TextView
-            android:id="@+id/file_explorer_window_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/file_explorer_back"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Large" />        
-        
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/file_explorer_divider_top"
-        android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:layout_below="@id/file_explorer_toolbar"
-        android:background="@color/mega" />
-
-    <!--  
-    <Button
-        android:id="@+id/file_explorer_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center" />
-    
-    
-  <Button
-       	android:id="@+id/file_explorer_button"
-       	android:layout_gravity="center"
-       	android:layout_height="55dp"
-       	android:layout_width="fill_parent"
-       	android:layout_alignParentBottom="true"
-       	android:background="@drawable/btn_default_holo_light_without_corners"
-       	android:textColor="@color/white">
-    </Button>
- -->
-<TabHost
-        android:id="@+id/tabhost_provider"
+    <TabHost
+        android:id="@+id/tabhost_explorer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/file_explorer_divider_top">
+        android:layout_below="@id/toolbar_explorer" >
 
         <LinearLayout
-            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:orientation="vertical" >
 
-           <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-       	   </TabWidget>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+            </TabWidget>
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="0"/>
+                android:layout_weight="0" />
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/provider_tabs_pager"
+                android:id="@+id/explorer_tabs_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
         </LinearLayout>
     </TabHost>
-    
-	<LinearLayout
+
+    <LinearLayout
         android:id="@+id/file_logging_in_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
