--- a/app/src/main/res/layout/item_file_explorer.xml
+++ b/app/src/main/res/layout/item_file_explorer.xml
@@ -1,55 +1,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/file_explorer_item_layout" >
     
     <ImageView
         android:id="@+id/file_explorer_thumbnail"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="5dp" 
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
         android:scaleType="fitCenter" />
-    
+
     <TextView
         android:id="@+id/file_explorer_filename"
-        android:layout_width="225dp"
-        android:layout_height="30dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/file_explorer_thumbnail"
-        android:paddingLeft="3dp"
-        android:paddingTop="7dp"
-        android:singleLine="false" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:singleLine="false"
+        android:textSize="14sp"/>
     
     <TextView
         android:id="@+id/file_explorer_filesize"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/file_explorer_thumbnail"
         android:layout_below="@+id/file_explorer_filename"
-        android:paddingLeft="3dp"
-        android:paddingBottom="7dp"
-        android:textColor="@color/file_list_second_row" 
-        android:textSize="12sp"/>
-    
-    <ImageView 
-        android:id="@+id/file_explorer_one_dot"
+        android:textColor="@color/file_list_second_row"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"/>
+
+    <ImageView
+        android:id="@+id/file_explorer_permissions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/dot"
-        android:layout_toRightOf="@id/file_explorer_filesize"
-        android:layout_alignTop="@id/file_explorer_filesize"
-        android:paddingTop="6dp"
-        android:paddingLeft="3dp" />
-    
-    <TextView
-        android:id="@+id/file_explorer_updated"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_toRightOf="@id/file_explorer_one_dot"
-        android:layout_below="@+id/file_explorer_filename"
-        android:paddingLeft="3dp"
-        android:paddingBottom="7dp"
-        android:textColor="@color/file_list_second_row"
-        android:textSize="12sp" />    
+        android:src="@drawable/ic_permissions_full_access"
+        android:background="@null"
+        android:paddingLeft="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
 
