--- a/app/src/main/res/layout/item_offline_list.xml
+++ b/app/src/main/res/layout/item_offline_list.xml
@@ -1,57 +1,50 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/offline_list_item_layout" >
     
-    <CheckBox
-        android:id="@+id/offline_list_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:checked="false"
-        android:focusable="false"
-        android:layout_centerVertical="true"
-        android:button="@drawable/btn_check_holo_light" />
-    
     <ImageView
         android:id="@+id/offline_list_thumbnail"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="5dp" 
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="12dp" 
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/offline_list_checkbox" />
+        android:layout_centerVertical="true"/>
     
     <TextView
         android:id="@+id/offline_list_filename"
         android:layout_width="225dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/offline_list_thumbnail"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
         android:textColor="@color/file_list_first_row"
-        android:paddingLeft="3dp"
-        android:paddingTop="7dp"
-        android:singleLine="false" />
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:singleLine="false"
+        android:textSize="14sp" />
     
     <TextView
         android:id="@+id/offline_list_filesize"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/offline_list_thumbnail"
         android:layout_below="@+id/offline_list_filename"
-        android:paddingLeft="3dp"
-        android:paddingBottom="7dp"
+        android:layout_marginLeft="13dp"
         android:textColor="@color/file_list_second_row" 
-        android:textSize="12sp"/>
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"/>   
     
     <ImageButton 
         android:id="@+id/offline_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
+        android:src="@drawable/ic_dots_vertical_grey"
 		android:background="@null" 
-        android:layout_alignTop="@id/offline_list_filename"
         android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingRight="15dp" />
+		android:layout_centerVertical="true" />
      <!--
     <ImageView
         android:id="@+id/offline_list_arrow_selection"
@@ -60,200 +53,7 @@
         android:src="@drawable/arrow_selection"
 		android:layout_alignBottom="@id/offline_list_thumbnail"
         android:layout_alignParentRight="true"
-        android:paddingRight="15dp" />-->
-    
-    <LinearLayout
-        android:id="@+id/offline_list_options"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/offline_list_filesize"
-        android:padding="0dp"
-        android:background="@color/adapters_background"
-        android:orientation="horizontal">
-        <!--  
-        <RelativeLayout
-                android:id="@+id/offline_list_option_download_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-                
-             <ImageView
-		            android:id="@+id/offline_list_option_download"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_download"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-    
-
-				<TextView 
-                    android:id="@+id/offline_list_option_download_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/general_download"
-                    android:layout_centerHorizontal="true"
-                    android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-       </RelativeLayout>
-       -->
-                   
-		<RelativeLayout
-               android:id="@+id/offline_list_option_properties_layout"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_weight="1" >
-
-		        <ImageView
-		            android:id="@+id/offline_list_option_properties"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/info_ic"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" 
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-		        
-		         <TextView 
-                    android:id="@+id/offline_list_option_properties_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-	        </RelativeLayout>  
-	        
-		<RelativeLayout
-                android:id="@+id/offline_list_option_public_link_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-	            
-		        <ImageView
-		            android:id="@+id/offline_list_option_public_link"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/link_ic"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp" />	
-		            
-		        <TextView 
-                    android:id="@+id/offline_list_option_public_link_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_get_link_menu"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		    </RelativeLayout>
-		        
-		 <RelativeLayout
-                android:id="@+id/offline_list_option_delete_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-		              
-		        <ImageView
-		            android:id="@+id/offline_list_option_delete"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_rubbish_bin"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" 
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-		        
-		        <TextView 
-                    android:id="@+id/offline_list_option_delete_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/section_rubbish_bin"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		      </RelativeLayout>
-		        
-		    
-		     <RelativeLayout
-                android:id="@+id/offline_list_option_overflow_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-		        
-		         <ImageView 
-		            android:id="@+id/offline_list_option_overflow"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_action_core_overflow"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-		         
-		         
-		         <TextView 
-                    android:id="@+id/offline_list_option_more_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_more"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-            
-		         </RelativeLayout>
-	        
-    </LinearLayout>
-    
-        <LinearLayout
-        android:id="@+id/offline_list_options_no_connection"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/offline_list_filesize"
-        android:padding="0dp"
-        android:background="#2a2a2a">
-    
-				<TextView
-		            android:id="@+id/offline_list_option_no_connection"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"		            
-		            android:layout_weight="1"
-		            android:textColor="@color/file_list_second_row"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />		        
-		              
-		        <ImageView
-		            android:id="@+id/offline_list_option_delete_no_connection"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_rubbish_bin"
-		            android:layout_weight="1"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />
-		        
-	        
-    </LinearLayout>
+        android:paddingRight="15dp" />-->    
     
 </RelativeLayout>
 
