--- a/app/src/main/res/menu/file_storage_action.xml
+++ b/app/src/main/res/menu/file_storage_action.xml
@@ -1,18 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
     
-        <item
-        android:id="@+id/cab_menu_select_all"
+    <item
+        android:id="@+id/cab_menu_create_folder"
         android:orderInCategory="100"
+        android:title="@string/action_select_all"
+        android:icon="@drawable/ic_create_new_folder_white"
+        MEGA:showAsAction="always" /> 
+        
+    <item
+        android:id="@+id/cab_menu_select_all"
+        android:orderInCategory="110"
         android:showAsAction="never"
         android:title="@string/action_select_all"
         MEGA:showAsAction="never" />   
         
    <item
         android:id="@+id/cab_menu_unselect_all"
-        android:orderInCategory="100"
+        android:orderInCategory="110"
         android:showAsAction="never"
         android:title="@string/action_unselect_all"
-        MEGA:showAsAction="never" />     
-   
+        MEGA:showAsAction="never" />      
+    
 </menu>
