--- a/app/src/main/res/menu/folder_link_action.xml
+++ b/app/src/main/res/menu/folder_link_action.xml
@@ -1,22 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
     
-	<item
-	    android:id="@+id/action_import_folder"
-	    android:orderInCategory="100"
-	    android:showAsAction="never"
-	    android:title="@string/import_folder"
-	    android:icon="@drawable/ic_action_bar_null"
-	    MEGA:showAsAction="never" />
+        <item
+        android:id="@+id/cab_menu_select_all"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_select_all"
+        MEGA:showAsAction="never" />   
+        
+   <item
+        android:id="@+id/cab_menu_unselect_all"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_unselect_all"
+        MEGA:showAsAction="never" /> 
     
     <item
-	    android:id="@+id/action_download_folder"
-	    android:orderInCategory="110"
-	    android:showAsAction="never"
-	    android:title="@string/download_folder"
-	    android:icon="@drawable/ic_action_bar_null"
-	    MEGA:showAsAction="never" />
-	
-
-	
+        android:id="@+id/cab_menu_download"
+        android:icon="@drawable/ic_menu_download_dark"
+        android:orderInCategory="105"
+        android:showAsAction="never"
+        android:title="@string/general_download"
+        MEGA:showAsAction="never" />
+        
 </menu>
