Task #5367- (Material Design Compatibility Pre-Lollipop) Offline and Inbox section

--- a/app/src/main/res/layout/fragment_inboxgrid.xml
+++ b/app/src/main/res/layout/fragment_inboxgrid.xml
@@ -2,26 +2,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InboxListFragment"
-	android:background="@color/white">
+    tools:context=".InboxFragmentLollipop"
+	android:background="@color/new_background_fragment">
     
-    <TextView
-	    android:id="@+id/inbox_content_grid_text"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingLeft="8dp"
-	    android:textColor="@color/black"
-	    android:background="@color/content_text_folder"
-	    android:textSize="14sp"/>
+    <RelativeLayout
+        android:id="@+id/inbox_grid_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:background="@color/new_background_fragment">
 
-    <ListView 
+        <TextView
+            android:id="@+id/inbox_content_grid_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"            
+            android:textColor="@color/text_secondary"
+            android:layout_centerVertical="true"
+            android:textSize="14sp" />
+        
+       <ProgressBar
+		    android:id="@+id/inbox_grid_download_progress_bar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" 
+			android:layout_below="@id/inbox_content_grid_text" 
+			style="@style/UsedSpaceProgressBar"
+			android:visibility="gone"/>
+       
+      <ImageView
+	        android:id="@+id/inbox_grid_transfer_arrow"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/ic_chevron_right_grey"
+	        android:layout_above="@id/inbox_grid_download_progress_bar" 
+	        android:layout_alignParentRight="true" 
+	        android:visibility="gone"/> 
+    </RelativeLayout>
+
+    <mega.privacy.android.app.components.AutofitRecyclerView
         android:id="@+id/inbox_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:dividerHeight="0dp"
-		android:divider="@null"
-		android:layout_below="@id/inbox_content_grid_text">
-    </ListView>
+        android:layout_height="match_parent"
+        android:choiceMode="multipleChoice" 
+		android:layout_below="@id/inbox_grid_content_text_layout"
+		android:columnWidth="172dp" />
     
     <ImageView
 	    android:id="@+id/inbox_grid_empty_image"
