--- a/app/src/main/res/layout/fragment_inboxlist.xml
+++ b/app/src/main/res/layout/fragment_inboxlist.xml
@@ -4,58 +4,52 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".InboxListFragment" >
+  
+    <RelativeLayout
+        android:id="@+id/inbox_list_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:background="@color/content_text_background">
 
-    <TextView
-	    android:id="@+id/inbox_list_content_text"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingLeft="8dp"
-	    android:paddingTop="3dp"
-	    android:paddingBottom="3dp"
-	    android:textColor="@color/white"
-	    android:background="@color/content_text_folder"
-	    android:textSize="14sp"/>
-    
-    <LinearLayout
-         android:id="@+id/out_space_inbox"
-    	 android:layout_width="fill_parent"
-    	 android:layout_height="wrap_content"
-    	 android:layout_alignParentBottom="true"
-    	 android:layout_gravity="center|fill_horizontal"
-    	 android:layout_centerHorizontal="true"
-    	 android:orientation="vertical">
+        <TextView
+            android:id="@+id/inbox_list_content_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"  
+            android:layout_centerVertical="true"          
+            android:textColor="@color/text_secondary"
+            android:textSize="14sp" />
+        
+       <ProgressBar
+		    android:id="@+id/inbox_list_download_progress_bar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" 
+			android:layout_below="@id/inbox_list_content_text" 
+			style="@style/UsedSpaceProgressBar"
+			android:visibility="gone"/>
+       
+       <ImageView
+	        android:id="@+id/inbox_list_transfer_arrow"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/ic_chevron_right_grey"
+	        android:layout_above="@id/inbox_list_download_progress_bar" 
+	        android:layout_alignParentRight="true" 
+	        android:visibility="gone"/> 
+    </RelativeLayout>
 
-		<TextView
-		    android:id="@+id/out_space_text_inbox"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:textColor="@color/white"
-		    android:textStyle="bold"
-		    android:paddingTop="20dp"
-		    android:paddingBottom="20dp"
-		    android:paddingLeft="20dp"
-		    android:paddingRight="20dp"
-		    android:gravity="center"
-		    android:background="@color/navigation_drawer_background"
-		    android:textSize="16sp"
-		    android:text="@string/warning_out_space"/>  
-         
-         <Button
-            android:id="@+id/out_space_btn_inbox"
-       		android:layout_height="48dp"       		
-       		android:layout_width="fill_parent"
-            android:background="@drawable/btn_default_holo_light_without_corners"
-            android:textColor="@color/white"
-            android:text="@string/my_account_upgrade_pro" />
-     </LinearLayout>
-    
-    <ListView
+    <View
+        android:id="@+id/separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/inbox_list_content_text_layout"
+        android:background="@color/delimiterColor" />      
+       
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/inbox_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" 
         android:choiceMode="multipleChoice"
-        android:layout_below="@id/inbox_list_content_text" >
-    </ListView>
+        android:layout_below="@id/separator" />
     
     <ImageView
 	    android:id="@+id/inbox_list_empty_image"
@@ -72,5 +66,5 @@
 	    android:layout_below="@id/inbox_list_empty_image"
 	    android:layout_marginTop="@dimen/standard_margin"
 	    android:layout_centerHorizontal="true"/>
-
+    
 </RelativeLayout>
